--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,14 @@
 {
   "name": "sitnbook-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "author": "",
+  "author": "Saurabh Shelar",
   "license": "ISC",
-  "description": "",
+  "description": "Backend for SitNBook seat booking system with Razorpay integration",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
